{
    "name": "ZoomActions",
    "maps": [
        {
            "name": "Touch",
            "id": "bb68e835-6d71-437d-8521-cbd16989424f",
            "actions": [
                {
                    "name": "PrimaryFingerPos",
                    "type": "Value",
                    "id": "0366059a-d894-4a57-892b-ced9f473a53c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerPos",
                    "type": "Value",
                    "id": "3676fe7d-0302-4b33-bfac-3a39c7f3418a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "121798a8-2177-4ec0-9893-62eb8ce77db9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ac537f9-6468-468a-ad24-be64bf173084",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0d585b3-f981-4854-8470-f7ebd4e87a3e",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4d57277-7bfc-44fd-9919-414866655f64",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}